--- a/src/pages/Navbar/Navbar.css
+++ b/src/pages/Navbar/Navbar.css
@@ -1,1 +1,15 @@
-    
+.navButton{
+    display: block;
+    padding: 10px !important;
+}
+.navButton:hover{
+    background-color: #E9ECEF;
+    color: #FF001F !important;   
+}
+.signInButton{
+    background: linear-gradient(90deg, #FF001F 50%, rgba(255, 0, 31, 0.85) 120%);
+    border-color: #FF001F !important;
+}
+.signInButton:hover{
+    background-color: rgba(255, 0, 31, 0.85) !important;
+}
