--- a/src/pages/Footer/Footer.css
+++ b/src/pages/Footer/Footer.css
@@ -1,18 +1,23 @@
-.buttonSubscribe{
-    background-color: white !important;
-    color: black !important;
-    border-color: #FF001F !important;
+.formInput {
+  border-radius: 20rem !important;
+  width: 13rem !important;
 }
-.buttonSubscribe:hover{
-    border-color: white !important;
-    color: white !important;
-    background-color: rgba(255, 0, 31, 0.85) !important;
+
+.buttonSubscribe {
+  background-color: white !important;
+  color: black !important;
+  border-color: #ff001f !important;
 }
-.jumbotronNewsLetter{
-    background-color: #FF001F !important;
-    color: white;
+.buttonSubscribe:hover {
+  border-color: white !important;
+  color: white !important;
+  background-color: rgba(255, 0, 31, 0.85) !important;
 }
-.jumbotronFooter{
-    background-color: #C70039 !important;
-    color: white;
+.jumbotronNewsLetter {
+  background-color: #ff001f !important;
+  color: white;
+}
+.jumbotronFooter {
+  background-color: #c70039 !important;
+  color: white;
 }
