--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,15 +1,12 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,800");
 
-* {
+.main-login {
   box-sizing: border-box;
   overflow-y: hidden;
 }
 
-.body {
+.container-login {
   background: #f6f5f7;
-}
-
-.main {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,12 +17,12 @@
   width: 50rem;
 }
 
-.main h1 {
+.container-login h1 {
   font-weight: bold;
   margin: 0;
 }
 
-.main p {
+.container-login p {
   font-size: 14px;
   font-weight: 100;
   line-height: 20px;
@@ -33,18 +30,18 @@
   margin: 20px 0 30px;
 }
 
-.main span {
+.container-login span {
   font-size: 12px;
 }
 
-.main a {
+.container-login a {
   color: #333;
   font-size: 14px;
   text-decoration: none !important;
   margin: 15px 0;
 }
 
-.main button {
+.container-login button {
   border-radius: 20px;
   border: 1px solid #ff4b2b;
   background-color: #ff4b2b;
@@ -57,20 +54,20 @@
   transition: transform 80ms ease-in;
 }
 
-.main button:active {
+.container-login button:active {
   transform: scale(0.95);
 }
 
-.main button:focus {
+.container-login button:focus {
   outline: none;
 }
 
-.main button.ghost {
+.container-login button.ghost {
   background-color: transparent;
   border-color: #ffffff;
 }
 
-form {
+.login-form {
   background-color: #ffffff;
   display: flex;
   align-items: center;
@@ -81,7 +78,7 @@ form {
   text-align: center;
 }
 
-input {
+.login- input {
   background-color: #eee;
   border: none;
   padding: 12px 15px;
@@ -93,7 +90,7 @@ input {
   border: 1px solid grey;
 }
 
-.container {
+.container-login {
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
@@ -117,9 +114,9 @@ input {
   z-index: 2;
 }
 
-.container.right-panel-active .sign-in-container {
+/* .container-login.right-panel-active .sign-in-container {
   transform: translateX(100%);
-}
+} */
 
 .sign-up-container {
   left: 0;
@@ -128,12 +125,12 @@ input {
   z-index: 1;
 }
 
-.container.right-panel-active .sign-up-container {
+/* .container-login.right-panel-active .sign-up-container {
   transform: translateX(100%);
   opacity: 1;
   z-index: 5;
   animation: show 0.6s;
-}
+} */
 
 @keyframes show {
   0%,
@@ -160,9 +157,9 @@ input {
   z-index: 100;
 }
 
-.container.right-panel-active .overlay-container {
+/* .container-login.right-panel-active .overlay-container {
   transform: translateX(-100%);
-}
+} */
 
 .overlay {
   background: #ff416c;
@@ -180,9 +177,9 @@ input {
   transition: transform 0.6s ease-in-out;
 }
 
-.container.right-panel-active .overlay {
+/* .container-login.right-panel-active .overlay {
   transform: translateX(50%);
-}
+} */
 
 .overlay-panel {
   position: absolute;
@@ -203,18 +200,18 @@ input {
   transform: translateX(-20%);
 }
 
-.container.right-panel-active .overlay-left {
+/* .container-login.right-panel-active .overlay-left {
   transform: translateX(0);
-}
+} */
 
 .overlay-right {
   right: 0;
   transform: translateX(0);
 }
 
-.container.right-panel-active .overlay-right {
+/* .container-login.right-panel-active .overlay-right {
   transform: translateX(20%);
-}
+} */
 
 .social-container {
   margin: 20px 0;
