--- a/src/pages/Home/Trend/Trend.css
+++ b/src/pages/Home/Trend/Trend.css
@@ -5,3 +5,8 @@
 .buttonCreate.mx-auto:hover{
     background-color: rgba(255, 0, 31, 0.85) !important;
 }
+.underlineTrend{
+    width: 365px; 
+    height:2px; 
+    background-color: #ff001f;
+  }
