--- a/src/pages/Home/Trend/Trend.css
+++ b/src/pages/Home/Trend/Trend.css
@@ -1,7 +1,24 @@
-.buttonCreate.mx-auto{
-    background: linear-gradient(90deg, #FF001F 50%, rgba(255, 0, 31, 0.85) 120%);
-    border-color: #FF001F !important;
+.trend-background {
+  background: url(./../../../image/AGU-stock-man-presenting-audience.jpg)
+    no-repeat;
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  padding: 6rem !important;
 }
-.buttonCreate.mx-auto:hover{
-    background-color: rgba(255, 0, 31, 0.85) !important;
+
+.trend-background h1 {
+  color: white;
+  background-color: black;
+  opacity: 0.5;
+  padding: 1rem !important;
+  margin: 0 20rem;
+}
+
+buttonCreate.mx-auto {
+  background: linear-gradient(90deg, #ff001f 50%, rgba(255, 0, 31, 0.85) 120%);
+  border-color: #ff001f !important;
+}
+.buttonCreate.mx-auto:hover {
+  background-color: rgba(255, 0, 31, 0.85) !important;
 }
