--- a/src/pages/Home/Category/Category.css
+++ b/src/pages/Home/Category/Category.css
@@ -6,6 +6,12 @@
   background-color: rgba(255, 0, 31, 0.85) !important;
 }
 
+.underlineCategory {
+  width: 160px;
+  height: 2px;
+  background-color: #ff001f;
+}
+
 .category-card {
   width: 18rem !important;
   max-height: 200px;
