--- a/src/pages/Home/Main/Main.css
+++ b/src/pages/Home/Main/Main.css
@@ -42,3 +42,22 @@ body {
   color: #ff001f;
   background-color: #ff001f !important;
 }
+
+.underlineMain {
+  width: 255px;
+  height: 2px;
+  background-color: #ff001f;
+}
+
+img {
+  height: 300px;
+}
+img {
+  transition: transform 1s, filter 2s ease-in-out;
+  filter: blur(2px);
+  transform: scale(1.1);
+}
+img:hover {
+  filter: blur(0);
+  transform: scale(1);
+}
