--- a/src/pages/Home/Trend/Trend.css
+++ b/src/pages/Home/Trend/Trend.css
@@ -15,10 +15,16 @@
   margin: 0 20rem;
 }
 
-buttonCreate.mx-auto {
+.buttonCreate.mx-auto {
   background: linear-gradient(90deg, #ff001f 50%, rgba(255, 0, 31, 0.85) 120%);
   border-color: #ff001f !important;
 }
 .buttonCreate.mx-auto:hover {
   background-color: rgba(255, 0, 31, 0.85) !important;
+}
+
+.underlineTrend {
+  width: 365px;
+  height: 2px;
+  background-color: #ff001f;
 }
