--- a/src/pages/Navbar/Navbar.css
+++ b/src/pages/Navbar/Navbar.css
@@ -1,3 +1,5 @@
+@import "~hover-on/hover-on.css";
+
 .navbar {
   height: 5rem;
 }
@@ -13,6 +15,7 @@
 }
 
 .signInButton {
+  color: white !important;
   background: linear-gradient(90deg, #ff001f 50%, rgba(255, 0, 31, 0.85) 120%);
   border-color: #ff001f !important;
 }
