--- a/src/pages/Home/Main/Main.css
+++ b/src/pages/Home/Main/Main.css
@@ -7,12 +7,14 @@ body {
   border: 1px solid #ff001f !important;
   border-radius: 10px !important;
   overflow: hidden;
+  color: black;
 }
-
+.card-body {
+  background-color: #e3e3e3;
+}
 .buttonSearch {
   border-radius: 20rem !important;
 }
-
 .main-background {
   background: url(./../../../image/quoteimages.jpg) no-repeat;
   position: relative;
@@ -50,12 +52,11 @@ body {
   background-color: #ff001f;
 }
 
-img {
-  height: 300px;
+.card-deck img {
+  height: 280px;
 }
 
 .card {
-  padding: 5px;
   border: solid 1px #efefef;
   box-shadow: 1px 1px 5px #ff001f;
   transform: scale(1);
