--- a/src/pages/Create_Event/CreateEvent.css
+++ b/src/pages/Create_Event/CreateEvent.css
@@ -1,20 +1,19 @@
-
-.inputText{
-    border:1px solid #FF001F !important;
+.inputText {
+  border: 1px solid #ff001f !important;
 }
-.subLabel{
-    font-size: 25px;
+.subLabel {
+  font-size: 25px;
 }
-.toggleButton{
-    background-color: #FF001F !important;
-    border-color: #FF001F !important;
+.toggleButton {
+  background-color: #ff001f !important;
+  border-color: #ff001f !important;
 }
-.inputPrepand{
-    border:1px solid #FF001F !important;
-    background-color: #FF001F !important;
-    color: white !important;
+.inputPrepand {
+  border: 1px solid #ff001f !important;
+  background-color: #ff001f !important;
+  color: white !important;
 }
-.save{
-    background: linear-gradient(90deg, #FF001F 50%, rgba(255, 0, 31, 0.85) 120%);
-    border-color: #FF001F !important;
+.save {
+  background: linear-gradient(90deg, #ff001f 50%, rgba(255, 0, 31, 0.85) 120%);
+  border-color: #ff001f !important;
 }
