--- a/src/pages/Home/Main/Main.css
+++ b/src/pages/Home/Main/Main.css
@@ -9,10 +9,9 @@ body {
   border-radius: 10px !important;
   overflow: hidden;
   color: black;
-  
 }
-.card-body{
-  background-color: #E3E3E3;
+.card-body {
+  background-color: #e3e3e3;
 }
 .buttonSearch {
   border-radius: 20rem !important;
@@ -52,7 +51,7 @@ body {
 .underlineMain {
   width: 255px;
   height: 2px;
-  background-color: #FF001F;
+  background-color: #ff001f;
 }
 
 .card-deck img {
