--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Cabin&display=swap");
 
 .navbar {
   height: 5rem;
@@ -6,8 +7,10 @@
 
 .brand {
   color: #000000;
-  font-size: 2rem;
+  font-size: 3rem;
   text-decoration: none !important;
+  font-family: "Allura", cursive;
+  text-transform: uppercase;
 }
 
 .brand:hover {
