--- a/src/pages/Home/Category/Category.css
+++ b/src/pages/Home/Category/Category.css
@@ -12,7 +12,18 @@
   background-color: #ff001f;
 }
 
-.category-card {
+.category-image {
   width: 18rem !important;
   max-height: 200px;
+}
+
+.category-card {
+  box-shadow: 1px 1px 5px #ff001f;
+  transform: scale(1);
+}
+.category-card:hover {
+  /* border: solid 1px #ccc; */
+  box-shadow: 2px 2px 20px #ff001f;
+  transition: transform 0.5s ease;
+  transform: scale(1.1);
 }
