--- a/src/pages/Home/Main/Main.css
+++ b/src/pages/Home/Main/Main.css
@@ -58,11 +58,11 @@ body {
   height: 280px;
 }
 
-.card {
+.main-card {
   box-shadow: 1px 1px 5px #c4c4c4;
   transform: scale(1);
 }
-.card:hover {
+.main-card:hover {
   /* border: solid 1px #ccc; */
   box-shadow: 2px 2px 20px #c4c4c4;
   transition: transform 0.5s ease;
