--- a/src/pages/Home/Trend/Trend.css
+++ b/src/pages/Home/Trend/Trend.css
@@ -10,9 +10,12 @@
 .trend-background h1 {
   color: white;
   background-color: black;
-  opacity: 0.5;
   padding: 1rem !important;
   margin: 0 20rem;
+}
+
+.hostEvent {
+  background: rgba(0, 0, 0, 0.5) !important;
 }
 
 .buttonCreate.mx-auto {
