--- a/src/pages/Form/Register/Register.css
+++ b/src/pages/Form/Register/Register.css
@@ -13,7 +13,7 @@
   flex-direction: column;
   font-family: "Montserrat", sans-serif;
   height: 100vh;
-  margin: -20px 0 50px;
+  margin: 12rem 0 50px;
   width: 50rem;
 }
 
@@ -163,7 +163,6 @@
 
 .overlay {
   background: #ff416c;
-  background: -webkit-linear-gradient(to right, #ff4b2b, #ff416c);
   background: linear-gradient(to right, #ff4b2b, #ff416c);
   background-repeat: no-repeat;
   background-size: cover;
