--- a/src/pages/Home/Carousel/Carousel.css
+++ b/src/pages/Home/Carousel/Carousel.css
@@ -1,22 +1,16 @@
-.carousel-image {
-  width: 70rem !important;
-  max-height: 25rem;
-  border-radius: 2rem !important;
+.carouselImg{
+  height: 200px;
+  width:350px;
 }
-
-.control-arrow {
-  padding: 1.5rem !important;
-  background-color: #ff001f !important;
+.BrainhubCarousel__arrowRight{
+  background-color: #ff4b2b;
 }
-
-.legend {
-  bottom: 0 !important;
-  width: 70rem !important;
-  font-size: 26px !important;
-  left: 31.2rem !important;
+.BrainhubCarousel__arrowLeft{
+  background-color: #ff4b2b;
 }
-
-.carousel .thumb img {
-  width: 10rem !important;
-  max-height: 5rem !important;
+.buttonImg{
+  width: 50%;
+  color:white;
+  background-color: #ff4b2b !important;
+  border-color: #ff4b2b !important;
 }
