--- a/src/pages/Home/Trend/Trend.css
+++ b/src/pages/Home/Trend/Trend.css
@@ -1,5 +1,5 @@
 .trend-background {
-  background: url(./../../../image/AGU-stock-man-presenting-audience.jpg)
+  background: url(./../../../image/background2.jpg)
     no-repeat;
   position: relative;
   background-size: cover;
@@ -15,7 +15,7 @@
 }
 
 .hostEvent {
-  background: rgba(0, 0, 0, 0.5) !important;
+  background: rgba(0, 0, 0, 0) !important;
 }
 
 .buttonCreate.mx-auto {
