--- a/src/pages/Form/Register/Register.css
+++ b/src/pages/Form/Register/Register.css
@@ -12,7 +12,7 @@
   align-items: center;
   flex-direction: column;
   font-family: "Montserrat", sans-serif;
-  height: 100vh;
+  height: 55vh;
   margin: 12rem 0 50px;
   width: 50rem;
 }
@@ -48,7 +48,7 @@
   color: #ffffff !important;
   font-size: 12px;
   font-weight: bold;
-  padding: 12px 45px;
+  padding: 16px 27px;
   letter-spacing: 1px;
   text-transform: uppercase;
   transition: transform 80ms ease-in;
@@ -146,7 +146,7 @@
   }
 }
 
-.overlay-container {
+.overlay-container-regis {
   position: absolute;
   top: 0;
   left: 50%;
@@ -167,7 +167,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 0 0;
-  color: #ffffff;
+  color: #ffffff !important;
   position: relative;
   left: -100%;
   height: 100%;
