update a little css styling

--- a/src/pages/Form/Login/Login.css
+++ b/src/pages/Form/Login/Login.css
@@ -4,7 +4,10 @@
   box-sizing: border-box;
   overflow-y: hidden;
 }
-
+.login-input:focus{
+  border-color: #ff001f !important;
+  box-shadow: #ff001f !important;
+}
 .container-login {
   background: #f6f5f7;
   display: flex;
