--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,7 +2,6 @@
   height: 5rem;
   box-shadow: 2px 2px 20px #c4c4c4;
 }
-
 .brand {
   color: #000000;
   font-size: 3rem;
@@ -17,4 +16,7 @@
 }
 .signInButton:hover {
   background-color: rgba(255, 0, 31, 0.85) !important;
+}
+.navDropItem:active{
+  background-color:#ff001f !important;
 }
