--- a/src/pages/Home/Main/Main.css
+++ b/src/pages/Home/Main/Main.css
@@ -4,6 +4,18 @@ body {
   padding: 0;
   overflow-x: hidden;
 }
+
+::-webkit-scrollbar{
+  width: 12px;
+  background-color: whitesmoke;
+}
+::-webkit-scrollbar-thumb{
+  background: linear-gradient(#ff001f 50%, rgba(255, 0, 31, 0.85) 120%);
+  border-radius:6px;
+}
+::-webkit-scrollbar-thumb:hover{
+  background: linear-gradient(#d4031b 50%, rgba(190, 3, 25, 0.85) 120%);
+}
 .card {
   border-radius: 10px !important;
   overflow: hidden;
@@ -34,7 +46,10 @@ body {
   border-radius: 20rem !important;
   /* border: 1px solid black !important; */
 }
-
+.mainInput:focus{
+  border-color: #ff001f !important;
+  box-shadow: #ff001f !important;
+}
 .mainSearch {
   margin-left: -34rem;
   color: black;
