--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -33,3 +33,12 @@
 .navDropItem:active {
   background-color: #ff001f !important;
 }
+
+.profileSetting {
+  color: black;
+  text-decoration: none !important;
+}
+
+.profileSetting:hover {
+  color: white !important;
+}
