--- a/src/pages/Home/Main/Main.css
+++ b/src/pages/Home/Main/Main.css
@@ -95,3 +95,9 @@ body {
     max-width: 1400px !important;
   }
 }
+
+@media (min-width: 1000px) {
+  .container {
+    max-width: 1200px !important;
+  }
+}
