--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -40,9 +40,9 @@
 }
 
 .profileSetting:hover {
-  color: white !important;
-}
-.i-logout:active{
-  color: white !important;
+  color: black !important;
 }
 
+.i-logout:active {
+  color: white !important;
+}
