--- a/src/pages/Home/Carousel/Carousel.css
+++ b/src/pages/Home/Carousel/Carousel.css
@@ -13,6 +13,7 @@
   color: white;
   background-color: #ff4b2b !important;
   border-color: #ff4b2b !important;
+  font-size: 20px !important;
 }
 
 .underlineCarousel {
