add booking modal

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -13,6 +13,7 @@
   color: white !important;
   background: linear-gradient(90deg, #ff001f 50%, rgba(255, 0, 31, 0.85) 120%);
   border-color: #ff001f !important;
+  /* margin-left: 350px; */
 }
 .signInButton:hover {
   background-color: rgba(255, 0, 31, 0.85) !important;
@@ -35,7 +36,7 @@
 }
 
 .profileSetting {
-  color: black;
+  color: black !;
   text-decoration: none !important;
 }
 
