get user for profile

--- a/src/pages/Form/Register/Register.css
+++ b/src/pages/Form/Register/Register.css
@@ -257,3 +257,10 @@
   color: black;
   text-decoration: none;
 }
+.passwordPrepend{
+  height: 75%;
+  margin-top: 8px !important;
+}
+.password-icon{
+  cursor: pointer;
+}
