update tampilan profile

--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -11,3 +11,33 @@
   height: 2px;
   background-color: #ff001f;
 }
+
+.sidebarUser{
+  background-color: #ff001f !important;
+  position: fixed;
+  font-size: 30px;
+  padding: 10px;
+  border-color: #ff001f !important;
+  display: inline !important;
+}
+.sidebarPassword{
+  background-color: #ff001f !important;
+  position: fixed;
+  font-size: 30px;
+  padding: 10px;
+  margin-top: 50px;
+  border-color: #ff001f !important;
+  display: inline !important;
+}
+.fa-userr{
+color:white !important;
+}
+.fa-userr:hover{
+  color:rgb(226, 217, 217) !important;
+}
+.fa-lock{
+  color:white !important;
+}
+.fa-lock:hover{
+  color:rgb(226, 217, 217) !important;
+}
