--- a/src/pages/HistoryPurchase/HistoryPurchase.css
+++ b/src/pages/HistoryPurchase/HistoryPurchase.css
@@ -1,8 +1,14 @@
-.imageTable{
-    width: 150px;
-    height: auto;
+.underlineHistory {
+	width: 255px;
+	height: 2px;
+	background-color: #ff001f;
 }
-.invoiceButton{
-    background-color: #FA423B !important;
-    border-color: #FA423B !important;
+
+.imageTable {
+	width: 150px;
+	height: auto;
+}
+.invoiceButton {
+	background-color: #fa423b !important;
+	border-color: #fa423b !important;
 }
