--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -44,7 +44,9 @@
   color: black !;
   text-decoration: none !important;
 }
-
+.profileSetting{
+  color: black;
+}
 .profileSetting:hover {
   color: black !important;
 }
