--- a/src/pages/Home/Main/Main.css
+++ b/src/pages/Home/Main/Main.css
@@ -71,6 +71,12 @@ body {
 	background-color: #ff001f;
 }
 
+.rowEvent {
+	margin-left: -100px !important;
+	margin-right: -100px !important;
+	padding-left: 15px;
+}
+
 .card-deck img {
 	height: 280px;
 }
@@ -79,6 +85,11 @@ body {
 	box-shadow: 0 5px 5px -2px gray;
 	transform: scale(1);
 }
+
+.card-body {
+	height: 280px;
+}
+
 .main-card:hover {
 	box-shadow: 2px 2px 20px #c4c4c4;
 	transition: transform 0.5s ease;
@@ -107,7 +118,3 @@ body {
 .cardImg {
 	transform: scale(1);
 }
-
-/* #cardContainer {
-	margin-right: 35px;
-} */
