--- a/src/pages/Home/Main/Main.css
+++ b/src/pages/Home/Main/Main.css
@@ -102,8 +102,14 @@ body {
 	.container {
 		max-width: 1200px !important;
 	}
-}
 
+}
+@media all and (max-width:480px) {
+	.main-card{
+		margin-left: 60px;
+		width: 400px !important;
+	}
+	}
 .cardImg {
 	transform: scale(1);
 }
