--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -6,3 +6,13 @@
   max-width: 1100px;
   margin-left: 8rem;
 }
+@media all and (max-width:480px) {
+  .contactCard{
+    width: 400px;
+    margin-left: -100px;
+  }
+  .logoImage{
+    width: 300px;
+    height: 70px;
+  }
+	}
