--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,6 +7,7 @@
   font-size: 3rem;
   font-family: "Allura", cursive;
   text-transform: uppercase;
+  
 }
 
 .signInButton {
@@ -80,5 +81,6 @@
   }
   .brand{
     margin-top: -10px;
+    margin-left: -50px;
   }
   }
