--- a/src/pages/Home/Main/Main.css
+++ b/src/pages/Home/Main/Main.css
@@ -2,6 +2,7 @@ html,
 body {
 	margin: 0;
 	padding: 0;
+	overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
@@ -83,6 +84,7 @@ body {
 .main-card {
 	box-shadow: 0 5px 5px -2px gray;
 	transform: scale(1);
+	margin-left: 30px !important;
 }
 
 .mainBody {
