update media queries

--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -15,4 +15,10 @@
     width: 300px;
     height: 70px;
   }
-	}
+  }
+  @media all and (max-width: 900px) {
+    .contactCard{
+      width: 700px;
+      margin-left: -280px;
+    }
+  }
