--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -100,3 +100,19 @@
       margin-left: 160px;
     }
   }
+  @media all and (max-width: 900px) {
+    .imageLogo{
+      height: 70px;
+      margin-top:-20px
+    }
+    .navbar-nav{
+      padding-bottom: 5px;
+    }
+    .signInButton{
+      margin-left: 370px;
+      margin-top: 10px;
+    }
+    .navProfile{
+      margin-left: 200px;
+    }
+  }
