update queries 320px

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -31,6 +31,6 @@
 .footerNav:hover {
   color: black !important;
 }
-@media all and (max-width:480px) {
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
   
 }
