--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -6,7 +6,13 @@
   max-width: 1100px;
   margin-left: 8rem;
 }
-@media all and (max-width:480px) {
+@media all and (max-width:320px){
+  .contactCard{
+    width: 350px !important;
+    margin-left: -155px !important;
+  }
+}
+@media all and (max-width: 480px){
   .contactCard{
     width: 400px;
     margin-left: -100px;
