--- a/src/pages/Home/Trend/Trend.css
+++ b/src/pages/Home/Trend/Trend.css
@@ -40,7 +40,23 @@
 	transform: scale(1.1);
 	z-index: 1;
 }
-@media all and (max-width: 480px) {
+@media all and (max-width:320px){
+	.card-deck{
+		margin-left: -40px !important;
+	}
+	.trendCard{
+		width: 300px !important;
+		margin-right: 	50px !important;
+	}
+	.containerHost{
+		margin-left: -75px !important;
+	}
+	.hostEvent{
+		margin-left: 40px !important;
+		font-size: 60px;
+	}
+}
+@media all and (max-width: 480px){
 	.trend-background {
 		width: 480px;
 		height: 500px;
